; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_cttimer.c_ct_xfitimer_irq_rearm.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_cttimer.c_ct_xfitimer_irq_rearm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ct_timer = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.hw* }
%struct.hw = type { i32 (%struct.hw*, i32)*, i32 (%struct.hw*, i32)* }

@MAX_TICKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ct_timer*, i32)* @ct_xfitimer_irq_rearm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ct_xfitimer_irq_rearm(%struct.ct_timer* %0, i32 %1) #0 {
  %3 = alloca %struct.ct_timer*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.hw*, align 8
  store %struct.ct_timer* %0, %struct.ct_timer** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ct_timer*, %struct.ct_timer** %3, align 8
  %7 = getelementptr inbounds %struct.ct_timer, %struct.ct_timer* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.hw*, %struct.hw** %9, align 8
  store %struct.hw* %10, %struct.hw** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @MAX_TICKS, align 4
  %13 = icmp sgt i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @MAX_TICKS, align 4
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %14, %2
  %17 = load %struct.hw*, %struct.hw** %5, align 8
  %18 = getelementptr inbounds %struct.hw, %struct.hw* %17, i32 0, i32 1
  %19 = load i32 (%struct.hw*, i32)*, i32 (%struct.hw*, i32)** %18, align 8
  %20 = load %struct.hw*, %struct.hw** %5, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 %19(%struct.hw* %20, i32 %21)
  %23 = load %struct.ct_timer*, %struct.ct_timer** %3, align 8
  %24 = getelementptr inbounds %struct.ct_timer, %struct.ct_timer* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %33, label %27

27:                                               ; preds = %16
  %28 = load %struct.hw*, %struct.hw** %5, align 8
  %29 = getelementptr inbounds %struct.hw, %struct.hw* %28, i32 0, i32 0
  %30 = load i32 (%struct.hw*, i32)*, i32 (%struct.hw*, i32)** %29, align 8
  %31 = load %struct.hw*, %struct.hw** %5, align 8
  %32 = call i32 %30(%struct.hw* %31, i32 1)
  br label %33

33:                                               ; preds = %27, %16
  %34 = load %struct.ct_timer*, %struct.ct_timer** %3, align 8
  %35 = getelementptr inbounds %struct.ct_timer, %struct.ct_timer* %34, i32 0, i32 0
  store i32 1, i32* %35, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
